# FaceDetection

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  IMatrixTest.cpp  ImageMatrix.cpp  ImageMatrix.h  ImageMatrixTest.cpp  PHaarTest.cpp  README.md  WClassifierTest.cpp  gtest.cmake  main.cpp
IProcessing/: CMakeLists.txt  IMatrix.cpp  IMatrix.h  PHaar.cpp  PHaar.h  WClassifier.cpp  WClassifier.h
NAlgebra/: CMakeLists.txt
NAlgebra/header/: AESByte.h  NAlgebra.h  NPMatrix.h  NVector.h  Pixel.h  Vector3.h  thirdparty.h  typedef.h
NAlgebra/source/: AESByte.cpp  NPMatrix.cpp  NVector.cpp  Pixel.cpp  Vector3.cpp
stb/: .travis.yml  stb.h  stb_c_lexer.h  stb_connected_components.h  stb_divide.h  stb_dxt.h  stb_easy_font.h  stb_herringbone_wang_tile.h  stb_image_resize.h  stb_image_write.h  stb_leakcheck.h  stb_perlin.h  stb_rect_pack.h  stb_sprintf.h  stb_textedit.h  stb_tilemap_editor.h  stb_truetype.h  stb_vorbis.c  stb_voxel_render.h  stretchy_buffer.h
stb/deprecated/: rrsprintf.h  stb_image.c
stb/tests/: c_lexer_test.c  grid_reachability.c  herringbone_generator.c  herringbone_map.c  image_test.c  resample_test.cpp  resample_test_c.c  stb.c  stb_cpp.cpp  stblib_test.c  stretch_test.c  test_c_compilation.c  test_cpp_compilation.cpp  test_truetype.c  test_vorbis.c  textedit_sample.c  tilemap_editor_integration_example.c
stb/tests/caveview/: cave_main.c  cave_mesher.c  cave_parse.c  cave_parse.h  cave_render.c  caveview.h  glext.h  glext_list.h  stb_gl.h  stb_glprog.h
stb/tests/oversample/: main.c  stb_wingraph.h
stb/tests/pg_test/: pg_test.c
stb/tests/prerelease/: stb_lib.h
stb/tests/sdf/: sdf_test.c
stb/tests/vorbseek/: vorbseek.c
stb/tools/: easy_font_maker.c  make_readme.c  unicode.c
